Make stop() work even if call it before start sets things up

--- a/util_ack/Makefile
+++ b/util_ack/Makefile
@@ -27,7 +27,7 @@ $(OBJDIR):
 $(OBJDIR)/%.o: src/%.c | $(OBJDIR)
 	$(CC) -c $(CFLAGS) $< -o $@
 
-$(APP_NAME): $(OBJDIR)/$(APP_NAME).o
+$(APP_NAME): $(OBJDIR)/$(APP_NAME).o ../lora_pkt_fwd/liblora_pkt_fwd.so
 	$(CC) $< -o $@ -L../lora_pkt_fwd -Wl,-rpath,\$$ORIGIN/../lora_pkt_fwd -llora_pkt_fwd -lpthread
 
 ### EOF
